--- a/public/resources/css/less/main.less
+++ b/public/resources/css/less/main.less
@@ -487,10 +487,18 @@ h1, h2, h3, h4, h5, h6 {
                 position: relative;
                 top: -5px;
             }
+            #summary {
+                margin-top: 0.7cm;
+                @media @notmobile {
+                    max-width: 600px; /* same as video */
+                }
+            }
             .book {
+                text-indent: 0px;
                 .cover img {
                     border: 1px solid mix(black, white, 10%);
                     border-radius: 5px;
+                    display: block;
                 }
                 .info {
                     text-align: left;
@@ -510,6 +518,7 @@ h1, h2, h3, h4, h5, h6 {
                     }
                 }
                 @media @mobile {
+                    display: block;
                     .cover {
                         margin-top: 0.5cm;
                         img {
@@ -587,6 +596,7 @@ aside {
         height: 100%;
     }
     .title-wrapper {
+        z-index: 1;
         background-color: mix(@darkblue, white, 10%);
         padding-top: 15px;
         padding-bottom: 10px;
@@ -640,6 +650,41 @@ aside {
                 font-weight: bold;
                 color: black;
                 text-decoration: none;
+            }
+        }
+
+        &.images {
+            @media @notmobile {
+                display: flex;
+                flex-wrap: wrap;
+                align-items: end;
+            }
+            li {
+                @media @notmobile {
+                    flex: 1;
+                    flex-basis: 50%;
+                    padding: 5px;
+                }
+                @media @mobile {
+                    a {
+                        white-space: initial;
+                        margin-bottom: 0.5cm;
+                    }
+                }
+                a {
+                    span {
+                        display: block;
+                    }
+                    img {
+                        max-width: 100%;
+                        border-radius: 5px;
+                        opacity: 0.75;
+                        transition: opacity 0.3s;
+                    }
+                    &:hover img, &.active img {
+                        opacity: 1;
+                    }
+                }
             }
         }
     }
@@ -705,11 +750,11 @@ body.sticky {
     cursor: pointer;
     display: block;
     position: absolute;
-    right: 10px;
-    top: 5px;
-    width: 45px;
-    line-height: 45px;
-    height: 45px;
+    right: 0px;
+    top: 0px;
+    width: 50px;
+    height: 50px;
+    padding-top: 15px;
     text-align: center;
     z-index: 2;
     #nav-toggler {
@@ -722,7 +767,6 @@ body.sticky {
         &.active {
             border: none;
             height: 0.6em;
-            top: -4px;
         }
     }
     #nav-toggler:before, #nav-toggler:after {
@@ -748,17 +792,25 @@ body.sticky {
         transform: rotate(135deg);
     }
 }
+.video {
+    text-align: center;
+    video {
+        object-fit: cover;
+        border-radius: 4px;
+        margin: 1cm auto;
+        @media @mobile {
+            max-width: 100%;
+        }
+        @media @notmobile {
+            max-width: 600px;
+        }
+    }
+}
 #scroll-top {
-    width: 46px;
-    height: 46px;
     background: url(../img/layout/arrow-up.png) no-repeat 50% 50% fade(black, 20%);
     border: 1px solid fade(black, 30%);
-    background-size: 30px;
     position: fixed;
-    bottom: 45px;
-    right: 45px;
     opacity: 0.5;
-    border-radius: 7px;
     cursor: pointer;
     animation-name: arrow-up;
     animation-duration: 6s;
@@ -767,6 +819,23 @@ body.sticky {
     transition: background-color 0.3s;
     &:hover {
         background-color: fade(black, 15%);
+    }
+    @media @notmobile {
+        width: 46px;
+        height: 46px;
+        border-radius: 7px;
+        background-size: 30px;
+        bottom: 60px;
+        right: 45px;
+    }
+    @media @mobile {
+        -webkit-tap-highlight-color: transparent; /* fix android highlight color */
+        width: 30px;
+        height: 30px;
+        border-radius: 4px;
+        background-size: 20px;
+        bottom: 85px;
+        right: 15px;
     }
 }
 @keyframes arrow-up {
