--- a/public/resources/css/less/main.less
+++ b/public/resources/css/less/main.less
@@ -416,11 +416,12 @@ h1, h2, h3, h4, h5, h6 {
         }
     }
     blockquote {
-        margin: 2em auto 2em 5em;
+        text-align: left;
+        margin: 1cm auto 1cm 5em;
         border-left: 6px solid #CECECE;
         padding-left: 1em;
         @media @mobile {
-            margin-left: 20px;
+            margin-left: 0px;
         }
     }
 }
@@ -474,7 +475,7 @@ h1, h2, h3, h4, h5, h6 {
             display: block;
             padding: 25px 20px 25px 35px;
         }
-        .book-poem-wrapper {
+        .content-wrapper {
             opacity: 1;
             transition: opacity 0.3s;
             #title {
@@ -534,7 +535,7 @@ h1, h2, h3, h4, h5, h6 {
         }
         &.monospace {
             text-align: center;
-            .book-poem-wrapper {
+            .content-wrapper {
                 display: inline-block;
                 text-align: left;
             }
@@ -806,6 +807,60 @@ body.sticky {
         }
     }
 }
+.textpage {
+    hr {
+        border: 1px dotted mix(black, white, 20%);
+    }
+    text-align: justify;
+    img {
+        margin: 10px auto 1cm auto;
+        border-radius: 5px;
+        box-shadow: 2px 2px 5px fade(black, 25%);
+        &.right {
+            margin-left: 1cm;
+            float: right;
+        }
+        &.left {
+            float: left;
+            margin-right: 1cm;
+        }
+    }
+    .poem {
+        font-family: 'roboto', 'Droid Sans Mono Regular', monospace;
+        margin: 1.5cm auto;
+        border-left: 1px dotted grey;
+        @media @notmobile {
+            margin-left: 15%;
+            padding-left: 20px;
+        }
+        @media @mobile {
+            padding-left: 10px;
+        }
+        h5 {
+            background-color: white;
+            font-weight: bold;
+            font-size: 1.3em;
+            margin-bottom: 10px;
+        }
+        .content {
+            white-space: pre-line;
+        }
+    }
+    @media @mobile {
+        text-align: left;
+        img {
+            &:not('.desktop-only') {
+                display: block;
+            }
+            float: none;
+            margin: 1cm 0px;
+            max-width: 100%;
+            + .poem {
+                margin-top: 0px;
+            }
+        }
+    }
+}
 #scroll-top {
     background: url(../img/layout/arrow-up.png) no-repeat 50% 50% fade(black, 20%);
     border: 1px solid fade(black, 30%);
@@ -834,8 +889,14 @@ body.sticky {
         height: 30px;
         border-radius: 4px;
         background-size: 20px;
-        bottom: 85px;
+        bottom: 30px;
         right: 15px;
+        transition: bottom 0.3s;
+    }
+    &.overlap-footer {
+        @media @mobile {
+            bottom: 85px;
+        }
     }
 }
 @keyframes arrow-up {
