--- a/public/resources/css/less/main.less
+++ b/public/resources/css/less/main.less
@@ -145,7 +145,7 @@ header {
                         border-bottom: 1px solid mix(black, white, 30%);
                     }
                     &.has-items > a {
-                        -webkit-tap-highlight-color: transparent; /* fix android highlight color */
+                        .android-highlight-fix;
                         /* don't group under one property «background» because it replaces the hover background color */
                         background-image: url(../img/layout/arrows.png);
                         background-repeat: no-repeat;
@@ -232,7 +232,7 @@ header {
                         }
                         &.active {
                             background: mix(@darkblue, white, 10%);
-                            font-weight: bold;
+                            color: black;
                             @media @mobile {
                                 border-left-color: orange;
                             }
@@ -559,7 +559,7 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 .aside-toggler {
-    -webkit-tap-highlight-color: transparent; /* fix android highlight color */
+    .android-highlight-fix;
     position: absolute;
     top: 45vh;
     width: 140px;
@@ -578,6 +578,7 @@ h1, h2, h3, h4, h5, h6 {
     color: @grey;
     line-height: 2em;
     transition: color 0.3s;
+    text-align: center;
     &.open, &:hover {
         color: @darkblue;
     }
@@ -654,23 +655,35 @@ aside {
             }
         }
 
-        &.images {
+        &.videos, &.images {
             @media @notmobile {
                 display: flex;
                 flex-wrap: wrap;
                 align-items: end;
             }
             li {
+                @media @mobile {
+                    a {
+                        white-space: initial;
+                    }
+                }
+                a {
+                    img {
+                        opacity: 0.75;
+                        transition: opacity 0.3s;
+                    }
+                    &:hover img, &.active img {
+                        opacity: 1;
+                    }
+                }
+            }
+        }
+        &.videos {
+            li {
                 @media @notmobile {
                     flex: 1;
                     flex-basis: 50%;
                     padding: 5px;
-                }
-                @media @mobile {
-                    a {
-                        white-space: initial;
-                        margin-bottom: 0.5cm;
-                    }
                 }
                 a {
                     span {
@@ -679,12 +692,28 @@ aside {
                     img {
                         max-width: 100%;
                         border-radius: 5px;
-                        opacity: 0.75;
-                        transition: opacity 0.3s;
                     }
-                    &:hover img, &.active img {
-                        opacity: 1;
+                    @media @mobile {
+                        margin-bottom: 0.5cm;
                     }
+                }
+            }
+        }
+        &.images {
+            display: flex;
+            flex-wrap: wrap;
+            @media @mobile {
+                li {
+                    flex: 1;
+                }
+            }
+            @media @notmobile {
+                li {
+                    flex: 1;
+                    flex-basis: 90px;
+                }
+                img {
+                    width: 90px;
                 }
             }
         }
@@ -747,7 +776,7 @@ body.sticky {
 }
 
 .nav-toggler-wrapper {
-    -webkit-tap-highlight-color: transparent; /* fix android highlight color */
+    .android-highlight-fix;
     cursor: pointer;
     display: block;
     position: absolute;
@@ -884,14 +913,14 @@ body.sticky {
         right: 45px;
     }
     @media @mobile {
-        -webkit-tap-highlight-color: transparent; /* fix android highlight color */
+        .android-highlight-fix;
         width: 30px;
         height: 30px;
         border-radius: 4px;
         background-size: 20px;
         bottom: 30px;
         right: 15px;
-        transition: bottom 0.3s;
+        transition: bottom 0.5s;
     }
     &.overlap-footer {
         @media @mobile {
@@ -922,5 +951,8 @@ body.sticky {
 }
 .none {
     display: none;
+}
+.android-highlight-fix {
+    -webkit-tap-highlight-color: transparent; /* fix android highlight color */
 }
 /* --------------------------- */
