--- a/public/resources/css/less/main.less
+++ b/public/resources/css/less/main.less
@@ -751,6 +751,16 @@ aside {
     position: sticky;
     top: 55px;
 }
+@media @mobile {
+    .mobile-stickable {
+        .stickable;
+    }
+}
+@media @notmobile {
+    .desktop-stickable {
+        .stickable;
+    }
+}
 
 .open-nav-search-field {
     border-radius: 5px 0px 0px 5px;
@@ -993,7 +1003,7 @@ input[type="text"], input[type="password"], textarea {
 input[type="submit"] {
     text-transform: uppercase;
     background-color: white;
-    padding: 10px 50px;
+    padding: 8px 50px;
     border: 2px solid #cecece;
     color: @darkblue;
     font-weight: bold;
@@ -1077,6 +1087,111 @@ textarea {
     padding-bottom: 20px;
     line-height: 1em;
 }
+.search-form-fullpage {
+    form {
+        margin: 1cm 0px;
+        @media @mobile {
+            margin-bottom: 0.5cm;
+            input[type="submit"] {
+                margin: 10px auto;
+            }
+        }
+    }
+}
+.results {
+    a {
+        color: @darkblue;
+        transition: color 0.3s;
+        &:hover {
+            color: red;
+        }
+    }
+    .info {
+        background-color: white;
+        line-height: 1.4em;
+        padding-top: 10px;
+        @media @mobile {
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+        }
+        @media @notmobile {
+            margin-bottom: 2cm;
+        }
+    }
+    .book-result-wrapper {
+        border-top: 1px dashed #CECECE;
+        padding-top: 10px;
+        width: 100%;
+        @media @notmobile {
+            padding-bottom: 50px;
+        }
+        @media @mobile {
+            padding-bottom: 20px;
+            display: flex;
+            flex-direction: column;
+        }
+    }
+    .book-title {
+        outline: 0;
+        font-size: 24px;
+        font-weight: bold;
+        display: block;
+        margin-bottom: 10px;
+        padding-bottom: 10px;
+        padding-top: 10px;
+        text-decoration: none;
+        background-color: white;
+        @media @mobile {
+            text-align: center;
+            order: 1;
+        }
+    }
+    .poem-result-wrapper {
+        @media @notmobile {
+            display: table-cell;
+            vertical-align: top;
+        }
+        @media @mobile {
+            order: 3;
+        }
+    }
+    .poem-result {
+        @media @notmobile {
+            padding: 0px 1cm;
+            margin-bottom: 20px;
+        }
+        @media @mobile {
+            margin-bottom: 30px;
+        }
+        .sample {
+            display: block;
+        }
+    }
+    .cover-wrapper {
+        @media @notmobile {
+            display: table-cell;
+            vertical-align: top;
+            width: 200px;
+        }
+        @media @mobile {
+            margin: 0px auto 20px auto;
+            order: 2;
+        }
+    }
+    .img-wrapper {
+        padding-top: 5px;
+        img {
+            width: 100%;
+            max-width: 250px;
+            @media @notmobile {
+                margin: 10px 0px 0px 0px;
+            }
+            @media @mobile {
+                margin: 0px;
+            }
+        }
+    }
+}
 #scroll-top {
     background: url(../img/layout/arrow-up.png) no-repeat 50% 50% fade(black, 20%);
     border: 1px solid fade(black, 30%);
@@ -1135,6 +1250,9 @@ textarea {
 }
 .center {
     text-align: center;
+}
+.italic {
+    font-style: italic;
 }
 .none {
     display: none;
