Add & wire «About the Poet» pages

--- a/public/resources/css/less/main.less
+++ b/public/resources/css/less/main.less
@@ -860,6 +860,11 @@ body.sticky {
     hr {
         border: 1px dotted mix(black, white, 20%);
     }
+    .subtitle {
+        margin-top: 10px;
+        margin-bottom: 20px;
+        line-height: 1.4em;
+    }
     text-align: justify;
     img {
         margin: 10px auto 1cm auto;
@@ -903,7 +908,7 @@ body.sticky {
             }
             float: none;
             margin: 1cm 0px;
-            max-width: 100%;
+            max-width: 100% !important;
             + .poem {
                 margin-top: 0px;
             }
