Fix search query getting broken due to some special characters; add missing 301 redirects; small CSS & JS fixes

--- a/public/resources/css/less/main.less
+++ b/public/resources/css/less/main.less
@@ -484,7 +484,7 @@ h1, h2, h3, h4, h5, h6 {
                 margin-bottom: 10px;
             }
             #summary {
-                margin-top: 0.7cm;
+                margin: 0.7cm auto 0px auto;
                 @media @notmobile {
                     max-width: 600px; /* same as video */
                 }
