Fix magnific popup to fit to viewport when there is image caption

--- a/public/resources/css/less/main.less
+++ b/public/resources/css/less/main.less
@@ -1346,3 +1346,19 @@ textarea {
     color: green;
 }
 /* --------------------------- */
+.content-wrapper {
+    img {
+        cursor: zoom-in;
+        cursor: -webkit-zoom-in;
+        cursor: -moz-zoom-in;
+    }
+}
+img.mfp-img {
+    cursor: zoom-out;
+    cursor: -webkit-zoom-out;
+    cursor: -moz-zoom-out;
+}
+.mfp-bottom-bar {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
