Move home page content to DB & wire TextPage Class

--- a/public/resources/css/less/main.less
+++ b/public/resources/css/less/main.less
@@ -1157,9 +1157,8 @@ textarea {
 }
 .search-form-fullpage {
     form {
-        margin: 1cm 0px;
+        margin: 1cm 0px 0.5cm 0px;
         @media @mobile {
-            margin-bottom: 0.5cm;
             input[type="submit"] {
                 margin: 10px auto;
             }
@@ -1183,7 +1182,7 @@ textarea {
             margin-bottom: 20px;
         }
         @media @notmobile {
-            margin-bottom: 2cm;
+            margin-bottom: 1cm;
         }
     }
     .book-result-wrapper {
