Fix edge-case 301 redirects

--- a/public/resources/css/less/main.less
+++ b/public/resources/css/less/main.less
@@ -95,6 +95,7 @@ header {
         span {
             font-size: 15px;
             transition: opacity 0.3s;
+            vertical-align: middle;
             opacity: 1;
             &.hidden {
                 opacity: 0;
