Fix images responsive size; add more redirects

--- a/public/resources/css/less/main.less
+++ b/public/resources/css/less/main.less
@@ -974,7 +974,7 @@ body.sticky {
             }
             float: none;
             margin: 1cm 0px;
-            &:not('.captcha') {
+            &:not(.captcha) {
                 max-width: 100% !important;
             }
             + .poem {
