Use jQuery sortable library within Lou's jQuery multi-select plugin to allow for element reordering

--- a/public/admin/css/lib/loudev-multiselect/multi-select.css
+++ b/public/admin/css/lib/loudev-multiselect/multi-select.css
@@ -94,3 +94,16 @@
   color: #aaa;
   cursor: text;
 }
+
+.ms-handle {
+    cursor: move;
+}
+
+/**
+ * The sortable handle should be visible only
+ * for the selected elements, but not for the
+ * selectable ones.
+ */
+.ms-selectable .ms-handle {
+    display: none;
+}
