--- a/public/admin/css/custom.css
+++ b/public/admin/css/custom.css
@@ -1,18 +1,8 @@
-.attachments-preview a {
-    font-size: 0.8em;
-	width: 130px;
-    height: 130px;
-    display: inline-block;
-    margin: 10px;
-	overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap; 
-	border-radius: 10px;
-    padding: 10px;
-	background-color: rgba(0, 0, 0, 0.05);
-    transition: 0.2s all;
-    text-align: center;
-}
-.attachments-preview a:hover {
-    background-color: rgba(0, 0, 0, 0.1);    
+.table-condensed > thead > tr > th,
+.table-condensed > thead > tr > td,
+.table-condensed > tbody > tr > th,
+.table-condensed > tbody > tr > td,
+.table-condensed > tfoot > tr > th,
+.table-condensed > tfoot > tr > td {
+    padding: 5px;
 }
