--- a/public/admin/css/lib/loudev-multiselect/multi-select.css
+++ b/public/admin/css/lib/loudev-multiselect/multi-select.css
@@ -78,6 +78,9 @@
   border-bottom: 1px #eee solid;
   padding: 2px 10px;
   color: #555;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .ms-container .ms-selectable li.ms-hover,
