Swap places of form submit and cancel buttons & move them to a component

--- a/public/admin/css/custom.css
+++ b/public/admin/css/custom.css
@@ -43,3 +43,8 @@
     clear: both;
     text-align: left; /* overwrite default sweet-alert center alignment */
 }
+
+.btn-default {
+    background-color: #99abb4;
+    color: white;
+}
