Mark retroactively gallery images title as nullable & take care of small UI and UX fixes

--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -1439,6 +1439,7 @@ textarea {
   }
   .navbar-header .navbar-brand {
     padding-top: 0;
+    line-height: initial;
   }
   .page-titles .breadcrumb {
     float: right;
