Set default timezone to Sofia, Bulgaria; Add MIME type column to attachments table; Toggle monospaced font for poems relying on leading white spaces

--- a/public/admin/css/custom.css
+++ b/public/admin/css/custom.css
@@ -48,3 +48,9 @@
     background-color: #99abb4;
     color: white;
 }
+label .info {
+    font-size: 0.8em; 
+}
+.monospace {
+    font-family: monospace;
+}
