Copy app.js from main branch, install library dependencies & add them all to the Laravel mix webpack

--- a/resources/css/less/style.less
+++ b/resources/css/less/style.less
@@ -1,4 +1,4 @@
-// @import (inline) "../../js/magnific-popup/magnific-popup.min.css";
+@import (inline) "../../../node_modules/magnific-popup/dist/magnific-popup.css";
 @import "fonts.less";
 @import "sizes.less";
 @import "colors.less";
