--- a/resources/css/less/sidebar.less
+++ b/resources/css/less/sidebar.less
@@ -197,14 +197,14 @@ aside {
         .filter {
             display: table;
             position: absolute;
-            right: 0px;
+            left: 0px;
             top: 50%;
             transform: translateY(-50%);
             background: mix(@theme-color, white, 10%);
             font-size: 0px;
             height: calc(~"100% - 2px"); /* 2px because of wrapper border */
             max-height: 50px;
-            text-align: right;
+            text-align: left;
             &.open {
                 width: 100%;
             }
@@ -220,7 +220,7 @@ aside {
                 vertical-align: middle;
                 line-height: 18px;
                 height: 30px;
-                margin-left: 15px;
+                margin-right: 15px;
             }
             button{
                 cursor: pointer;
@@ -246,7 +246,7 @@ aside {
                     height: 20px;
                     opacity: 0.3;
                     position: absolute;
-                    left: 0px;
+                    right: 0px;
                     top: 50%;
                     transform: translateY(-50%);
                 }
