Wire like functionality

--- a/resources/css/less/style.less
+++ b/resources/css/less/style.less
@@ -9,6 +9,7 @@
 @import "sidebar.less";
 @import "gallery.less";
 @import "form.less";
+@import "social.less";
 @import "comments.less";
 @import "search.less";
 @import "video.less";
