Wire search functionality

--- a/resources/css/less/header.less
+++ b/resources/css/less/header.less
@@ -396,7 +396,7 @@ body.sticky {
 
         .fixed-nav-to-top;
 
-        nav > ul > li {
+        nav:first-child > ul > li {
             border-top-color: transparent;
             > a {
                 line-height: @nav-height-sticky;
