--- a/resources/css/less/search.less
+++ b/resources/css/less/search.less
@@ -76,6 +76,11 @@
         @media @mobile {
             margin-bottom: 30px;
         }
+        em {
+            display: block;
+            line-height: initial;
+            margin-bottom: 10px;
+        }
         .sample {
             display: block;
         }
@@ -103,5 +108,10 @@
                 margin: 0px;
             }
         }
+    }
+
+    // pagination wrapper
+    > nav {
+        text-align: center;
     }
 }
