--- a/resources/css/less/style.less
+++ b/resources/css/less/style.less
@@ -12,6 +12,7 @@
 @import "social.less";
 @import "comments.less";
 @import "search.less";
+@import "pagination.less";
 @import "video.less";
 @import "textpage.less";
 @import "footer.less";
