--- a/resources/css/less/gallery.less
+++ b/resources/css/less/gallery.less
@@ -52,7 +52,7 @@
             float: left;
             width: 100%;
             position: relative;
-            span {
+            img + span {
                 display: block;
                 margin-top: 0.5cm;
                 line-height: 1.4em;
